# rostate_machine

./: .gitignore  .travis.yml  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  rosdoc.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
data/: example_state_machine.xml  make_pdf.sh
include/rostate_machine/: callback_func.h  event_client.h  example_event_client.h  graph_writer.h  rostate_machine.h  state_machine.h
launch/: example.launch  rostate_machine.launch
msg/: Event.msg  State.msg  StateChanged.msg
scripts/: viewer.py
src/: callback_func.cpp  event_client.cpp  example_event_client.cpp  example_event_client_node.cpp  rostate_machine.cpp  rostate_machine_node.cpp  state_machine.cpp
test/: test_rostate_machine.test
test/data/: test_state_machine.xml
test/src/: test_rostate_machine.cpp
