<?xml version="1.0"?>
<package format="2">
  <name>rostate_machine</name>
  <version>0.0.2</version>
  <description>The rostate_machine package</description>

  <maintainer email="ms.kataoka@gmail.com">masaya kataoka</maintainer>

  <license>Apache v2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>roslib</build_depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>rostest</build_export_depend>
  <build_export_depend>roslib</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rostest</exec_depend>
  <exec_depend>roslib</exec_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
